--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,10 @@
   <style name="DialogActivity" parent="Theme.AppCompat.Dialog">
     <item name="android:windowBackground">@android:color/transparent</item>
     <item name="android:windowNoTitle">true</item>
+    <item name="android:windowActionBar">false</item>
     <item name="android:windowIsTranslucent">true</item>
     <item name="android:windowIsFloating">false</item>
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
   </style>
 </resources>
